syntax = "proto3";

option csharp_namespace = "LucasNotes.UserService.Protos";
package UserManager;

message GetUserByIdRequest {
	int32 Id = 1;
}

message UserDto {
	int32 UserId = 1;
	string UserName = 2;
	string Password = 3;
	int32 Gender = 4;
	string Email = 5;
}

message GetUsersReply {
	repeated UserDto Users = 1;
}

service UserManager{
	rpc GetUserById (GetUserByIdRequest) returns (UserDto);
	rpc GetUsers (GetUserByIdRequest) returns (GetUsersReply);
}
